# roomformoreranch

./: .gitignore  goats.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: settings.py  urls.py
goats/: admin.py  apps.py  filters.py  models.py  urls.py  views.py
goats/migrations/: 0001_initial.py  0002_alter_goat_description_alter_goat_image_and_more.py  0003_alter_goat_description_alter_goat_registry_and_more.py  0004_goat_breed.py  0005_goat_birth_number_goat_birth_weight_goat_category_and_more.py  0006_alter_goat_birth_number_alter_goat_breed_and_more.py  0007_alter_goat_breed.py  0008_alter_goat_breed.py  0009_breed_category_rename_breed_goat_old_breed_and_more.py  0010_goat_breed_goat_category.py  0011_alter_category_options.py  0012_remove_goat_old_breed_remove_goat_old_category.py  0013_alter_goat_breed_alter_goat_category_delete_breed_and_more.py  0014_alter_goat_breed_alter_goat_description_and_more.py
goats/static/goats/: styles.css
goats/templates/goats/: base.html  goat_list copy.html  goat_list.html
landing/: urls.py
landing/templates/landing/: index.html
roomformoreranch/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/css/: styles.css
templates/: base.html
