[project]
name = "roomformoreranch"
description = "Room for More Ranch website"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.10.0",
    "black==25.9.0",
    "click==8.3.0",
    "django==5.2.7",
    "django-environ==0.12.0",
    "django-filter==25.2",
    "django-ninja>=1.4.5",
    "djangorestframework==3.16.1",
    "djhtml>=3.0.10",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pillow==11.3.0",
    "platformdirs==4.5.0",
    "pre-commit>=4.4.0",
    "psycopg2-binary==2.9.10",
    "pytest>=9.0.1",
    "pytokens==0.1.10",
    "pyyaml==6.0.3",
    "ruff>=0.14.4",
    "sqlparse==0.5.3",
]
[tool.ruff]
# Consistent Ruff settings: exclude migrations and set a consistent line length
exclude = ["**/migrations/*.py"]
line-length = 88

[tool.ruff.lint]
# Enable a comprehensive set of rules including security and Django specific checks
select = ["E", "W", "F", "I", "UP", "B", "C4", "DJ", "S"]

# Ignore rules related to missing documentation strings (D-codes from pydocstyle)
ignore = ["D100", "D101", "D102", "D103", "D104", "S101"]

[tool.ruff.format]
# Consistent formatting style: double quotes and spaces
quote-style = "double"
indent-style = "space"
